--- a/.gitignore
+++ b/.gitignore
@@ -177,7 +177,7 @@ cython_debug/
 
 # Abstra
 # Abstra is an AI-powered process automation framework.
-# Ignore directories containing user credentials, local state, and settings.
+# Ignore directories contang user credentials, local state, and settings.
 # Learn more at https://abstra.io/docs
 .abstra/
 
@@ -205,3 +205,10 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+# local env & artifacts
+.env
+data/*.json
+models/*
+!data_samples/*
